deploy: 643e1f8620fbe95b39df12b748ba51e6f823735c

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
 <main class=main>
 <article class=first-entry>
 <header class=entry-header>
+<h2>yeni test 123
+</h2>
+</header>
+<section class=entry-content>
+<p>merhaba dünya deneme</p>
+</section>
+<footer class=entry-footer><span title="2022-02-13 00:23:03 +0300 +0300">February 13, 2022</span></footer>
+<a class=entry-link aria-label="post link to yeni test 123" href=https://ghp.avci.me/blog/yeni/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>It's done
 </h2>
 </header>
