--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>My New Hugo Site</title>
+<title>My New Hugo Site 2</title>
 <meta name=description content>
 <meta name=author content>
 <link rel=canonical href=https://ghp.avci.me/>
