deploy: cd4a9ab893f1f591516e5bb2209b8838fe421a3d

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
 <main class=main>
 <article class=first-entry>
 <header class=entry-header>
-<h2>New 2 Test Cache
+<h2>New 2 Test Cache2
 </h2>
 </header>
 <section class=entry-content>
-<p>New 2 Test Cache sub title Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit sodales nisi ut ultrices. Sed ac efficitur enim. Vivamus mattis pellentesque sagittis. Vestibulum eu viverra nisi. Ut at libero eros. Aenean ac dui risus. Sed placerat elementum arcu, sed suscipit nunc sodales vel.
+<p>New 2 Test Cache2 sub title Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit sodales nisi ut ultrices. Sed ac efficitur enim. Vivamus mattis pellentesque sagittis. Vestibulum eu viverra nisi. Ut at libero eros. Aenean ac dui risus. Sed placerat elementum arcu, sed suscipit nunc sodales vel.
 Nunc mollis vestibulum augue, sed fringilla odio imperdiet et. Integer lacus ligula, convallis nec est quis, tincidunt convallis ipsum. Sed non arcu a libero feugiat dictum....</p>
 </section>
 <footer class=entry-footer><span title="2022-02-20 09:30:03 +0000 UTC">February 20, 2022</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Me</footer>
-<a class=entry-link aria-label="post link to New 2 Test Cache" href=https://ghp.avci.me/blog/new2/></a>
+<a class=entry-link aria-label="post link to New 2 Test Cache2" href=https://ghp.avci.me/blog/new2/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
