--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
 <main class=main>
 <article class=first-entry>
 <header class=entry-header>
+<h2>Ready
+</h2>
+</header>
+<section class=entry-content>
+<p>Ready Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin suscipit sodales nisi ut ultrices. Sed ac efficitur enim. Vivamus mattis pellentesque sagittis. Vestibulum eu viverra nisi. Ut at libero eros. Aenean ac dui risus. Sed placerat elementum arcu, sed suscipit nunc sodales vel.
+Nunc mollis vestibulum augue, sed fringilla odio imperdiet et. Integer lacus ligula, convallis nec est quis, tincidunt convallis ipsum. Sed non arcu a libero feugiat dictum. Morbi sed purus eu magna dapibus hendrerit....</p>
+</section>
+<footer class=entry-footer><span title="2022-02-27 14:17:00 +0300 +0300">February 27, 2022</span>&nbsp;·&nbsp;Musa Avcı</footer>
+<a class=entry-link aria-label="post link to Ready" href=https://ghp.avci.me/blog/ready/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>New 2 Test Cache3
 </h2>
 </header>
